# Memory

./: CMakeLists.txt  difficulties.h  difficultyselectionwindow.cpp  difficultyselectionwindow.h  main.cpp  mainmenu.cpp  mainmenu.h  memory_game.qrc  memorygamewindow.cpp  memorygamewindow.h  memorygamewindow.ui  settingswindow.cpp  settingswindow.h  styleswindow.cpp  styleswindow.h
